# Blue-Horizon-AI-Concierge

./: README.md  pyproject.toml
Data/: amenities.csv  recommendations_knowledge_base.csv  rooms.csv  service_appointments.csv  staff_schedules.csv
data/: event_spaces.csv  promotions.csv  staff.csv
data/csv/: faq_knowledge_base.csv
data/pandas/: amenities.pkl  event_spaces.pkl  faq_knowledge_base.pkl  promotions.pkl  recommendations_knowledge_base.pkl  rooms.pkl  service_appointments.pkl  services.pkl  staff.pkl  staff_schedules.pkl
data1/: services.csv
notebooks/: eda.ipynb  llamaindex_redis.ipynb  neonsql.ipynb
