[project]
name = "blue_horizon_ai_concierge"
version = "0.1.0"
description = ""
authors = [
    {name = "Ian Ellis"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "llama-index (>=0.14.6,<0.15.0)",
    "llama-index-vector-stores-redis (>=0.6.1,<0.7.0)",
    "llama-index-readers-file (>=0.5.4,<0.6.0)",
    "llama-index-embeddings-huggingface (>=0.6.1,<0.7.0)",
    "llama-index-llms-openai (>=0.6.6,<0.7.0)",
    "pydantic-ai[examples] (>=1.8.0,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "psycopg[binary] (>=3.2.12,<4.0.0)",
    "openai (>=2.7.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false